# wgpu-in-app

./: Cargo.toml
Apple/base/: ViewController.swift  libwgpu_in_app.h
Apple/base/Assets.xcassets/AppIcon.appiconset/: Contents.json
Apple/base/Base.lproj/: Main.storyboard
Apple/wgpu_in_App.xcodeproj/: project.pbxproj
Apple/wgpu_in_App.xcodeproj/project.xcworkspace/xcuserdata/peterwhidden.xcuserdatad/: UserInterfaceState.xcuserstate
Apple/wgpu_in_App.xcodeproj/xcshareddata/xcschemes/: wgpu_phone.xcscheme
Apple/wgpu_in_App.xcodeproj/xcuserdata/peterwhidden.xcuserdatad/xcschemes/: xcschememanagement.plist
app-surface/src/: app_surface.rs  ios.rs  lib.rs  touch.rs
wgpu-in-app/: Cargo.toml
wgpu-in-app/src/: wgpu_canvas.rs
wgpu-in-app/src/examples/: boids.rs  cube.rs  game_test.rs  hdr_image_view.rs  mod.rs  msaa_line.rs  page_turning.rs  shadow.rs  water.rs
wgpu-in-app/src/ffi/: ios.rs
