[package]
name = "wgpu-in-app"
authors = ["jinleili"]
version = "0.3.0"
edition = "2021"
rust-version = "1.71"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = []
angle = ["wgpu/angle"]
vulkan-portability = ["wgpu/vulkan-portability"]

[dependencies.app_surface]
path = "../app-surface"
package = "app-surface"

[dependencies.game]
path = "../../mote"
package = "game"

[dependencies]
bytemuck.workspace = true
glam.workspace = true
log.workspace = true
noise.workspace = true
pollster.workspace = true
rand.workspace = true
wgpu.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
async-executor.workspace = true
winit.workspace = true

[target.'cfg(target_os = "ios")'.dependencies]
env_logger.workspace = true
libc.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger.workspace = true
jni.workspace = true
jni_fn.workspace = true
log-panics = "*"


